--- a/index.html
+++ b/index.html
@@ -5,11 +5,51 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- SEO Meta Tags -->
+    <title>Admin Dashboard | Manage Your Business Analytics</title>
+    <meta
+      name="description"
+      content="Powerful admin dashboard for managing business analytics, user data, and system configurations. Access real-time insights and control your application settings."
+    />
+    <meta
+      name="keywords"
+      content="admin dashboard, business analytics, data management, admin panel, dashboard interface"
+    />
+    <meta name="author" content="Your Company Name" />
+
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta
+      property="og:title"
+      content="Admin Dashboard | Manage Your Business Analytics"
+    />
+    <meta
+      property="og:description"
+      content="Powerful admin dashboard for managing business analytics, user data, and system configurations."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com/admin" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Admin Dashboard | Manage Your Business Analytics"
+    />
+    <meta
+      name="twitter:description"
+      content="Powerful admin dashboard for managing business analytics, user data, and system configurations."
+    />
+
     <!-- Source sans font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet" />
-    <title>Admin Page</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Robots Meta Tag -->
+    <meta name="robots" content="noindex, nofollow" />
   </head>
   <body>
     <div id="root"></div>
